# chip8

./: .clang-format  CMakeLists.txt  CMakeSettings.json  FormatAllFiles.bat  FormatAllFiles.sh  README.md
.github/workflows/: ClangFormat.yml  UbuntuBuild.yml
app/: CMakeLists.txt
app/src/: main.cpp
app/src/app/: app.cpp  app.h  glfw.cpp  inputs.cpp
app/src/renderer/: renderer.cpp  renderer.h
app/src/renderer/impl/gl3/: renderer.cpp  renderer.h
app/src/renderer/impl/gl3/shared/: shader.cpp  shader.h
chip8/: CMakeLists.txt
chip8/inc/nt/: chip8.h  chip8_std_impl.h
chip8/src/: chip8.cpp  instructions.cpp  std_impl.cpp
